changed color of project photos, changed color scheme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/170aa037ab.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Exo:wght@500&family=Yantramanav&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style/style.css">
   <link rel="icon" href="assets/dev-photos/beer (1).png">
 </head>
@@ -24,60 +25,60 @@
     <main>
         <!-- SECTION ONE -->
         <section id="mainSection1">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-12">
-                <img class="shadow" src="assets/photos/profile.jpg" alt="profile" id="profile-pic">
-              </div>
-            </div>
-          </div>
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-12">
-                <h1 id="aboutHeader">WHO AM I?</h1>
-                <div class="accordion" id="aboutAccordion">
-                  <div class="aboutItem">
-                        <div class="card-body" id="headingOne">
-                        <h2 class="mb-0">
-                            <button class="btn btn-block collapsed aboutBtn" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                            UNC WILMINGTON GRADUATE
-                            </button>
-                        </h2>
-                        </div>
-                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#aboutAccordion">
-                        <div class="card-body">
-                            I graduated from UNC Wilmington in 2018. I have a bachelors in Political Science where I focused on international politics and terrorism. At university I was a pioneer student in their study abroad program to Aberdeen, Scotland. There I lived in Scotland for a year and traveled all over the continent!                      </div>
-                        </div>
-                  </div>
-                  <div class="aboutItem">
-                        <div class="card-body" id="headingTwo">
-                        <h2 class="mb-0">
-                            <button class="btn btn-block collapsed aboutBtn" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            UNC CHAPEL HILL TRAINED WEB DEVELOPER
-                            </button>
-                        </h2>
-                        </div>
-                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#aboutAccordion">
-                        <div class="card-body">
-                            I am currently enrolled at UNC Chapel Hill with their Full Stack Web Development program. Here I am learning everything there is to know about Full Stack Development. I am set to graduate the program in December of 2020!                      </div>
-                        </div>
-                  </div>
-                  <div class="aboutItemLast">
-                        <div class="card-body" id="headingThree">
-                        <h2 class="mb-0">
-                            <button class="btn btn-block collapsed aboutBtn" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            MAKER WITH A PASSION FOR ART AND DESIGN
-                            </button>
-                        </h2>
-                        </div>
-                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#aboutAccordion">
-                        <div class="card-body">
-                            I have a passion for working with my hands! I come from an artistic family where I was pushed to pursue my design skills and ideas. I have always had a great knack for graphic design and engineering. With my talents I have even broken into jewelry design!                      </div>
-                        </div>
-                  </div>
+            <div class="container-fluid">
+                <div class="row">
+                <div class="col-lg-12">
+                    <img class="shadow" src="assets/photos/profile.jpg" alt="profile" id="profile-pic">
                 </div>
-              </div>
+                </div>
             </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 id="aboutHeader">WHO AM I?</h1>
+                        <div class="accordion" id="aboutAccordion">
+                            <div class="aboutItem">
+                                <div class="card-body" id="headingOne">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-block collapsed aboutBtn" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                    UNC WILMINGTON GRADUATE
+                                    </button>
+                                </h2>
+                                </div>
+                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#aboutAccordion">
+                                <div class="card-body">
+                                    I graduated from UNC Wilmington in 2018. I have a bachelors in Political Science where I focused on international politics and terrorism. At university I was a pioneer student in their study abroad program to Aberdeen, Scotland. There I lived in Scotland for a year and traveled all over the continent!                      </div>
+                                </div>
+                            </div>
+                            <div class="aboutItem">
+                                <div class="card-body" id="headingTwo">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-block collapsed aboutBtn" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    UNC CHAPEL HILL TRAINED WEB DEVELOPER
+                                    </button>
+                                </h2>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#aboutAccordion">
+                                <div class="card-body">
+                                    I am currently enrolled at UNC Chapel Hill with their Full Stack Web Development program. Here I am learning everything there is to know about Full Stack Development. I am set to graduate the program in December of 2020!                      </div>
+                                </div>
+                            </div>
+                            <div class="aboutItemLast">
+                                <div class="card-body" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-block collapsed aboutBtn" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    MAKER WITH A PASSION FOR ART AND DESIGN
+                                    </button>
+                                </h2>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#aboutAccordion">
+                                <div class="card-body">
+                                    I have a passion for working with my hands! I come from an artistic family where I was pushed to pursue my design skills and ideas. I have always had a great knack for graphic design and engineering. With my talents I have even broken into jewelry design!                      </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
           </div>
           
         </section>
@@ -97,7 +98,7 @@
                 <div class="row rounded">
                   <div class="col-lg-12">
                     <div class="btn frontSelector" id="projectSelector">
-                      <div class="card-body front" id="projectSelText">
+                      <div class="card-body front shadow" id="projectSelText">
                         FONT-END
                       </div>
                     </div>
@@ -106,7 +107,7 @@
                 <div class="row rounded">
                   <div class="col-lg-12">
                     <div class="btn backSelector" id="projectSelector">
-                      <div class="card-body" id="projectSelText">
+                      <div class="card-body shadow" id="projectSelText">
                         BACK-END
                       </div>
                     </div>
