added animation to home page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="row rounded">
                   <div class="col-lg-12">
                     <div class="btn frontSelector" id="projectSelector">
-                      <div class="card-body front shadow" id="projectSelText">
+                      <div class="card-body front shadow rounded" id="projectSelText">
                         FONT-END
                       </div>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="row rounded">
                   <div class="col-lg-12">
                     <div class="btn backSelector" id="projectSelector">
-                      <div class="card-body shadow" id="projectSelText">
+                      <div class="card-body shadow rounded" id="projectSelText">
                         BACK-END
                       </div>
                     </div>
@@ -415,7 +415,7 @@
         <div class="container-fluid footer">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow" id="contact">
+                    <div class="shadow rounded" id="contact">
                         <h1>CONTACT ME</h1>
                         <hr>
                         <br>
@@ -424,7 +424,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow" id="checkOut">
+                    <div class="shadow rounded" id="checkOut">
                         <h1>CHECK ME OUT</h1>
                         <hr>
                         <br>
@@ -450,8 +450,9 @@
             </span>
         </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js" integrity="sha512-8Wy4KH0O+AuzjMm1w5QfZ5j5/y8Q/kcUktK9mPUVaUoBvh3QPUZB822W/vy7ULqri3yR8daH3F58+Y8Z08qzeg==" crossorigin="anonymous"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineMax.min.js" integrity="sha512-lJDBw/vKlGO8aIZB8/6CY4lV+EMAL3qzViHid6wXjH/uDrqUl+uvfCROHXAEL0T/bgdAQHSuE68vRlcFHUdrUw==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js" integrity="sha512-8Wy4KH0O+AuzjMm1w5QfZ5j5/y8Q/kcUktK9mPUVaUoBvh3QPUZB822W/vy7ULqri3yR8daH3F58+Y8Z08qzeg==" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/javascript/javascript.js"></script>
 </body>
 </html>
