added eat da burger to projects back end

--- a/index.html
+++ b/index.html
@@ -188,6 +188,16 @@
                 <div id="projectCarouselBACK" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner rounded shadow">
                     <div class="carousel-item active">
+                        <img src="./assets/dev-photos/website-pics/back/burger.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block rounded">
+                            <div id="captionContent">
+                                <h5>Eat-Da-Burger</h5>
+                                <p>This is a resturant app that lets the user input burgers they would like to eat! When a user selects the EAT button, the burger is moved from the burger menu to the eaten list. The user can enter as many burgers as the want!</p>
+                                <a href="https://github.com/wilsoncollin7/eat-da-burger" class="btn portGitBtn shadow" target="#">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block rounded">
                             <div id="captionContent">
