changed main section to a moving mountian image

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <link rel="icon" href="assets/dev-photos/beer (1).png">
 </head>
 <body>
-    <header>
-        <section class="container-fluid" id="headerContainer">
+    <header class="container-fluid" id="mainContainer">
+        <div id="headerImage"></div>
+        <div class="headerOverlay">
             <nav class="nav-bar">
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
@@ -31,9 +32,11 @@
                     </li>
                 </ul>
             </nav>
-            <h1 id="mainHeader">COLLIN WILSON</h1>
-            <h5 id="mainSubHeader">DESIGNER | MAKER | CREATOR</h5>
-        </section>
+            <div class="mainHeaderWrapper">
+                <h1 id="mainHeader">COLLIN WILSON</h1>
+                <h5 id="mainSubHeader">DESIGNER | MAKER | CREATOR</h5>
+            </div>
+        </div>
         <div id="scrollElem">
             <a id="mainBottom" href="#mainSection1">scroll down<br><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
         </div>
