changed whole color scheme to match the main image

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                         </div>
                     </div>
                     <div id="bottomScrollElm">
-                        <a id="hobbyBottom" href="#headerContainer"><i class="fa fa-angle-double-up" aria-hidden="true"></i><br>scroll up</a>
+                        <a id="hobbyBottom" href="#headerImage"><i class="fa fa-angle-double-up" aria-hidden="true"></i><br>scroll up</a>
                     </div>
                 </div>
             </div>
