changed colors to match the mount photo perfectly, added animations to the front and back selector

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#mainSection4" >HOBBIES</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="assets/dev-photos/Collin Dean Wilson - Developer.pdf" target="#" >RESUME</a>
+                    </li>
                 </ul>
             </nav>
             <div class="mainHeaderWrapper">
@@ -47,7 +50,7 @@
             <div class="container-fluid">
                 <div class="row">
                 <div class="col-lg-12">
-                    <img class="shadow" src="assets/photos/profile.jpg" alt="profile" id="profile-pic">
+                    <img src="assets/photos/profile.jpg" alt="profile" id="profile-pic">
                 </div>
                 </div>
             </div>
@@ -117,7 +120,7 @@
                 <div class="row rounded">
                   <div class="col-lg-12">
                     <div class="btn frontSelector" id="projectSelector">
-                      <div class="card-body front shadow rounded" id="projectSelText">
+                      <div class="card-body front rounded" id="projectSelText">
                         FONT-END
                       </div>
                     </div>
@@ -126,7 +129,7 @@
                 <div class="row rounded">
                   <div class="col-lg-12">
                     <div class="btn backSelector" id="projectSelector">
-                      <div class="card-body shadow rounded" id="projectSelText">
+                      <div class="card-body rounded" id="projectSelText">
                         BACK-END
                       </div>
                     </div>
@@ -135,7 +138,7 @@
               </div>
               <div class="col-lg-10">
                 <div id="projectCarouselFRONT" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner rounded shadow">
+                  <div class="carousel-inner rounded">
                     <div class="carousel-item active">
                         <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block rounded">
@@ -189,7 +192,7 @@
                   </a>
                 </div>
                 <div id="projectCarouselBACK" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner rounded shadow">
+                  <div class="carousel-inner rounded">
                     <div class="carousel-item active">
                         <img src="./assets/dev-photos/website-pics/back/burger.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block rounded">
@@ -264,7 +267,7 @@
                 </div>
                 <div class="row" id="skillsRow">
                     <div class="col-lg-3">
-                        <div class="card shadow" id="skillCard1">
+                        <div class="card" id="skillCard1">
                             <div class="card-header" id="skillListHeader">
                                 Languages
                             </div>
@@ -295,7 +298,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card shadow" id="skillCard2">
+                        <div class="card" id="skillCard2">
                             <div class="card-header" id="skillListHeader">
                                 Technologies
                             </div>
@@ -325,7 +328,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card shadow" id="skillCard3">
+                        <div class="card" id="skillCard3">
                             <div class="card-header" id="skillListHeader">
                                 Other
                             </div>
