started the media queries added the hamberger for the nav bar

--- a/index.html
+++ b/index.html
@@ -10,30 +10,36 @@
   <script src="https://kit.fontawesome.com/170aa037ab.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Exo:wght@500&family=Yantramanav&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style/style.css">
+  <link rel="stylesheet" href="assets/style/media.css">
   <link rel="icon" href="assets/dev-photos/beer (1).png">
 </head>
 <body>
     <header class="container-fluid" id="mainContainer">
         <div id="headerImage"></div>
         <div class="headerOverlay">
-            <nav class="nav-bar">
-                <ul class="nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#mainSection1">WHO AM I</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#mainSection2">PROJECTS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#mainSection3">SKILLS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#mainSection4" >HOBBIES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="assets/dev-photos/Collin Dean Wilson - Developer.pdf" target="#" >RESUME</a>
-                    </li>
-                </ul>
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="nav justify-content-center">
+                        <li class="navbar-nav nav-item">
+                            <a class="nav-link" href="#mainSection1">WHO AM I</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#mainSection2">PROJECTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#mainSection3">SKILLS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#mainSection4" >HOBBIES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="assets/dev-photos/Collin Dean Wilson - Developer.pdf" target="#" >RESUME</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
             <div class="mainHeaderWrapper">
                 <h1 id="mainHeader">COLLIN WILSON</h1>
