most media queris are there still need to work on the projects section and the main image

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-2">
-                <div class="row rounded">
+                <div class="row rounded" id="frontRow">
                   <div class="col-lg-12">
                     <div class="btn frontSelector" id="projectSelector">
                       <div class="card-body front rounded" id="projectSelText">
@@ -132,7 +132,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="row rounded">
+                <div class="row rounded" id="backRow">
                   <div class="col-lg-12">
                     <div class="btn backSelector" id="projectSelector">
                       <div class="card-body rounded" id="projectSelText">
