--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-10">
+              <div class="col-lg-10" id="carouselDiv">
                 <div id="projectCarouselFRONT" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner rounded">
                     <div class="carousel-item active">
                         <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Earthlight Weather App</h5>
                                 <p class="card-text" id="portDes">Here is a weather app that lets the user search by cities. Once the user enters a city the weather information if pulled from the Open Weather Map API. That information is displayed using JavaScript and jQuery. The searched cities are also saved in the local storage of the browser and the user can jump back to those cities in the history section.</p>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Movie Search</h5>
                                 <p class="card-text" id="portDes">With this app, our team created an interactive movie dashboard using the The Movie DB API to pull various movie information, the New York Times API to pull movie review information, and the FourSquare Places API to pull movie theater data close to the user's zip code.</p>
@@ -170,7 +170,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Password Generator</h5>
                                 <p class="card-text" id="portDes">Here is an application to generate a password to the users’ specifications. It uses HTML, CSS, and JavaScript to create a dynamic webpage. This password generator will take in input from the user and determine the strings of characters to use in the generation of a password. Each password if randomly generated.</p>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Daily Planner</h5>
                                 <p class="card-text" id="portDes">Scheduling application that helps the user stay organized by saving their daily tasks.</p>
@@ -202,30 +202,30 @@
                   <div class="carousel-inner rounded">
                     <div class="carousel-item active">
                         <img src="./assets/dev-photos/website-pics/back/burger.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Eat-Da-Burger</h5>
-                                <p>This is a resturant app that lets the user input burgers they would like to eat! When a user selects the EAT button, the burger is moved from the burger menu to the eaten list. The user can enter as many burgers as the want!</p>
+                                <p class="card-text" id="portDes">This is a resturant app that lets the user input burgers they would like to eat! When a user selects the EAT button, the burger is moved from the burger menu to the eaten list. The user can enter as many burgers as the want!</p>
                                 <a href="https://github.com/wilsoncollin7/eat-da-burger" class="btn portGitBtn shadow" target="#">GitHub</a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Employee Management System</h5>
-                                <p>This project allows a manager to manage their employees! The user can cycle through several differnt options to view differnt sets of data, add data, update data, and delete data! This program is made using Node.js and MySQL.</p>
+                                <p class="card-text" id="portDes">This project allows a manager to manage their employees! The user can cycle through several differnt options to view differnt sets of data, add data, update data, and delete data! This program is made using Node.js and MySQL.</p>
                                 <a href="https://github.com/wilsoncollin7/employee-management-system" class="btn portGitBtn shadow" target="#">GitHub</a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/back/note.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Note Taking App</h5>
-                                <p>This project uses a deployed app on Heroku. The application helps the user take notes. The user enters a title and note body, then saves the note. This note is saved on a server. There are GET and POST requests to retrive the notes and display them. The user can also delete a note once they are done with it.</p>
+                                <p class="card-text" id="portDes">This project uses a deployed app on Heroku. The application helps the user take notes. The user enters a title and note body, then saves the note. This note is saved on a server. There are GET and POST requests to retrive the notes and display them. The user can also delete a note once they are done with it.</p>
                                 <a href="https://wilsoncollin7-note.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
                                 <a href="https://github.com/wilsoncollin7/note" class="btn portGitBtn shadow" target="#">GitHub</a>
                             </div>
@@ -233,7 +233,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/back/team.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>Team Builder</h5>
                                 <p class="card-text" id="portDes">This application creates a team HTML that displays inputed employees so that managers can see thier teams they created. The teams are created after asking the user questions; those answers are then dynamically rendered into a HTML output file which displays the teams in thier own cards.</p>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block rounded">
+                        <div class="carousel-caption rounded">
                             <div id="captionContent">
                                 <h5>README.md Generator</h5>
                                 <p class="card-text" id="portDes">This application will generate a README.md file based off of the inputs from the user in a node.js terminal. These inputs are then written to a new file that can be used in any project!</p>
