carousell mobile looking better!

--- a/index.html
+++ b/index.html
@@ -191,12 +191,8 @@
                         </div>
                       </div>
                   </div>
-                  <a class="carousel-control-prev" href="#projectCarouselFRONT" role="button" data-slide="prev">
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#projectCarouselFRONT" role="button" data-slide="next">
-                    <span class="sr-only">Next</span>
-                  </a>
+                  <a class="carousel-control-prev" href="#projectCarouselFRONT" role="button" data-slide="prev"></a>
+                  <a class="carousel-control-next" href="#projectCarouselFRONT" role="button" data-slide="next"></a>
                 </div>
                 <div id="projectCarouselBACK" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner rounded">
@@ -252,12 +248,8 @@
                         </div>
                     </div>
                   </div>
-                  <a class="carousel-control-prev" href="#projectCarouselBACK" role="button" data-slide="prev">
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#projectCarouselBACK" role="button" data-slide="next">
-                    <span class="sr-only">Next</span>
-                  </a>
+                  <a class="carousel-control-prev" href="#projectCarouselBACK" role="button" data-slide="prev"></a>
+                  <a class="carousel-control-next" href="#projectCarouselBACK" role="button" data-slide="next"></a>
                 </div>
               </div>
             </div>
