changing the project page, basic layout

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
 
         <!-- SECTION TWO -->
-        <section id="mainSection2">
+        <!-- <section id="mainSection2">
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
@@ -252,6 +252,50 @@
                   <a class="carousel-control-next" href="#projectCarouselBACK" role="button" data-slide="next"></a>
                 </div>
               </div>
+            </div>
+          </div>
+        </section> -->
+
+        <section id="mainSection2">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <h1 id="projectsHeader">PROJECTS</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-3"></div>
+              <div class="col-lg-3">
+                <button class="btn frontSelector" id="projectSelector">FRONT-END</button>
+              </div>
+              <div class="col-lg-3">
+                <button class="btn backSelector" id="projectSelector">BACK-END</button>
+              </div>
+              <div class="col-lg-3"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12" id="projectContainer">
+                <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectTile" id="frontProject" alt="...">
+
+                <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectTile" id="frontProject" alt="...">
+
+                <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectTile" id="frontProject" alt="...">
+
+                <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectTile" id="frontProject" alt="...">
+
+                <!-- ----------------------------------------------------------------------------------------- -->
+
+                <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectTile" id="backProject" alt="...">
+
+                <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="prjectTile" id="backProject" alt="...">
+
+                <img src="./assets/dev-photos/website-pics/back/note.JPG" class="prjectTile" id="backProject" alt="...">
+
+                <img src="./assets/dev-photos/website-pics/back/team.JPG" class="prjectTile" id="backProject" alt="...">
+
+                <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="prjectTile" id="backProject" alt="...">
             </div>
           </div>
         </section>
