the layout and baisc animation of the project page is ready

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
             </div>
             <div class="row">
               <div class="col-lg-3"></div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 selectorRow">
                 <button class="btn frontSelector" id="projectSelector">FRONT-END</button>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 selectorRow">
                 <button class="btn backSelector" id="projectSelector">BACK-END</button>
               </div>
               <div class="col-lg-3"></div>
@@ -277,26 +277,82 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12" id="projectContainer">
-                <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectTile" id="frontProject" alt="...">
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" id="frontProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Earthlight Weather App</h5>
+                    <a href="https://wilsoncollin7.github.io/Earthlight/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                    <a href="https://github.com/wilsoncollin7/Earthlight" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  </div>
+                </div>
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectImg" id="frontProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Movie Search</h5>
+                    <a href="https://wilsoncollin7.github.io/project1/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                    <a href="https://github.com/wilsoncollin7/project1" class="btn portGitBtn shadow" target="#">GitHub</a>
 
-                <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectTile" id="frontProject" alt="...">
+                  </div>
+                </div>
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectImg" id="frontProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Password Generator</h5>
+                    <a href="https://wilsoncollin7.github.io/Password-Generator/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                    <a href="https://github.com/wilsoncollin7/Password-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
 
-                <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectTile" id="frontProject" alt="...">
+                  </div>
+                </div>
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectImg" id="frontProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Daily Planner</h5>
+                    <a href="https://wilsoncollin7.github.io/work-day-scheduler/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                    <a href="https://github.com/wilsoncollin7/work-day-scheduler" class="btn portGitBtn shadow" target="#">GitHub</a>
 
-                <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectTile" id="frontProject" alt="...">
-
+                  </div>
+                </div>
                 <!-- ----------------------------------------------------------------------------------------- -->
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectImg" id="backProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Eat-Da-Burger</h5>
+                    <a href="https://github.com/wilsoncollin7/eat-da-burger" class="btn portGitBtn shadow" target="#">GitHub</a>
 
-                <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectTile" id="backProject" alt="...">
+                  </div>
+                </div>
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="prjectImg" id="backProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Employee Management System</h5>
+                    <a href="https://github.com/wilsoncollin7/employee-management-system" class="btn portGitBtn shadow" target="#">GitHub</a>
 
-                <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="prjectTile" id="backProject" alt="...">
+                  </div>
+                </div>
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/back/note.JPG" class="prjectImg" id="backProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Note Taking App</h5>
+                    <a href="https://wilsoncollin7-note.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                    <a href="https://github.com/wilsoncollin7/note" class="btn portGitBtn shadow" target="#">GitHub</a>
 
-                <img src="./assets/dev-photos/website-pics/back/note.JPG" class="prjectTile" id="backProject" alt="...">
-
-                <img src="./assets/dev-photos/website-pics/back/team.JPG" class="prjectTile" id="backProject" alt="...">
-
-                <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="prjectTile" id="backProject" alt="...">
-            </div>
+                  </div>
+                </div>
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/back/team.JPG" class="prjectImg" id="backProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>Team Builder</h5>
+                    <a href="https://github.com/wilsoncollin7/team-builder" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  </div>
+                </div>
+                <div class="projectImgContainer prjectTile">
+                  <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="prjectImg" id="backProject" alt="...">
+                  <div class="projectImgOverlay">
+                    <h5>README.md Generator</h5>
+                    <a href="https://github.com/wilsoncollin7/README-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  </div>
+                </div>
+              </div>
           </div>
         </section>
 
