--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12" id="projectContainer">
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" id="frontProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Earthlight Weather App</h5>
@@ -285,7 +285,7 @@
                     <a href="https://github.com/wilsoncollin7/Earthlight" class="btn portGitBtn shadow" target="#">GitHub</a>
                   </div>
                 </div>
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectImg" id="frontProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Movie Search</h5>
@@ -294,7 +294,7 @@
 
                   </div>
                 </div>
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectImg" id="frontProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Password Generator</h5>
@@ -303,7 +303,7 @@
 
                   </div>
                 </div>
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectImg" id="frontProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Daily Planner</h5>
@@ -313,7 +313,7 @@
                   </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------- -->
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectImg" id="backProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Eat-Da-Burger</h5>
@@ -321,7 +321,7 @@
 
                   </div>
                 </div>
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="prjectImg" id="backProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Employee Management System</h5>
@@ -329,7 +329,7 @@
 
                   </div>
                 </div>
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/back/note.JPG" class="prjectImg" id="backProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Note Taking App</h5>
@@ -338,14 +338,14 @@
 
                   </div>
                 </div>
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/back/team.JPG" class="prjectImg" id="backProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>Team Builder</h5>
                     <a href="https://github.com/wilsoncollin7/team-builder" class="btn portGitBtn shadow" target="#">GitHub</a>
                   </div>
                 </div>
-                <div class="projectImgContainer prjectTile">
+                <div class="projectImgContainer projectTile">
                   <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="prjectImg" id="backProject" alt="...">
                   <div class="projectImgOverlay">
                     <h5>README.md Generator</h5>
